<resources>
    <string name="app_name">Android Feed Sample App</string>
    <string name="no_internet">No internet!</string>
    <string name="check_your_connection_and_try_again">Check your connection and try again.</string>
    <string name="not_now">Not now</string>
    <string name="permission_continue">Continue</string>
    <string name="settings">Settings</string>
    <string name="like">Like</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add Comment</string>
    <string name="edited">Edited</string>
    <string name="admin">Admin</string>
    <string name="pdf">PDF</string>
    <string name="see_more">&#160;See More</string>
    <string name="see_less">&#160;See Less</string>
    <plurals name="likes">
        <item quantity="one">1 Like</item>
        <item quantity="other">%d Likes</item>
    </plurals>
    <plurals name="likes_small">
        <item quantity="one">1 like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="comments">
        <item quantity="one">1 Comment</item>
        <item quantity="other">%d Comments</item>
    </plurals>
    <plurals name="comments_small">
        <item quantity="one">1 comment</item>
        <item quantity="other">%d comments</item>
    </plurals>
    <plurals name="replies">
        <item quantity="one">1 Reply</item>
        <item quantity="other">%d Replies</item>
    </plurals>
    <string name="create_a_post">Create a post</string>
    <string name="done">Done</string>
    <string name="post">Post</string>
    <string name="write_something_here">Write something here…</string>
    <string name="attach_files">Attach Files</string>
    <string name="add_video">Add Video</string>
    <string name="add_photo">Add Photo</string>
    <string name="playing_this_video">Playing this video…</string>
    <string name="add_more">Add More</string>
    <string name="documents">Documents</string>
    <string name="action_search">Search</string>
    <string name="sort">Sort</string>
    <string name="browse_other_docs">Browse other docs…</string>
    <string name="search_hint_text">Search…</string>
    <string name="large_file_select_error_message">Files below 100 KB and above 100 MB are not allowed</string>
    <string name="all_posts">All Posts</string>
    <string name="following">Following</string>
    <string name="scalix">Scalix</string>
    <string name="new_post">New Post</string>
    <plurals name="placeholder_pages">
        <item quantity="one">1 Page</item>
        <item quantity="other">%d Pages</item>
    </plurals>
    <string name="link">Link</string>
    <string name="gallery">Gallery</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="photo_saved_to_gallery">Photo saved to gallery</string>
    <string name="video_saved_to_gallery">Video saved to gallery</string>
    <string name="saved_to_gallery">Saved to gallery</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="select_multiple">Select multiple</string>
    <string name="ok">OK</string>
    <string name="all_media">All Media</string>
    <string name="request_not_processed">Couldn\'t process your request</string>
    <string name="notifications">Notifications</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="report_sub_header">You would be able to report this %s after selecting a problem.</string>
    <string name="please_specify_the_problem_to_continue">Please specify the problem to continue</string>
    <string name="report">Report</string>
    <string name="write_description">Write Description</string>
    <string name="s_is_reported_for_review">%s is reported for review</string>
    <string name="our_team_will_look_into_your_feedback_and_will_take_appropriate_action_on_this_s">Our team will look into your feedback and will take appropriate action on this %s</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="view_more_replies">View more replies</string>
    <string name="of"> of </string>
    <string name="type_your_reason">Type your reason</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="reason_for_deleting">Reason for deletion</string>
    <string name="delete">Delete</string>
    <string name="delete_caps">DELETE</string>
    <string name="delete_post_question">Delete post?</string>
    <string name="delete_post_message">Are you sure you want to delete this post? This action cannot be reversed.</string>
    <string name="post_deleted">Post Deleted!</string>
    <string name="delete_comment_question">Delete comment?</string>
    <string name="delete_comment_message">Are you sure you want to delete this comment? This action cannot be reversed.</string>
    <string name="comment_deleted">Comment Deleted!</string>
    <string name="placeholder_replies">%1$d of %2$d</string>
    <string name="reply">Reply</string>
    <string name="replying_to_s">Replying to %s</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="access_denied">Access denied!</string>
    <string name="oops_you_don_t_seem_to_have_access_to_the_community">Oops! You don’t seem to have access to the community.</string>
    <string name="post_created">Post created successfully!</string>
    <string name="posting">Posting</string>
    <string name="retry">Retry</string>
    <plurals name="you_can_select_upto_x_items">
        <item quantity="one">You can select upto 1 item!</item>
        <item quantity="other">You can select upto %d items!</item>
    </plurals>
    <string name="a_post_is_already_uploading">A post is already uploading!</string>
    <string name="post_pinned_to_top">Post pinned to top!</string>
    <string name="post_unpinned">Post unpinned!</string>
    <string name="no_comment_found">No comment found</string>
    <string name="be_the_first_one_to_comment">Be the first one to comment</string>
    <string name="general_channel_name">General notifications</string>
    <string name="general_channel_description">All general notifications</string>
    <string name="login_details">Login Details</string>
    <string name="api_key">Api Key</string>
    <string name="enter_api_key">Enter API Key</string>
    <string name="save">Save</string>
    <string name="is_guest_user">Is Guest User</string>
    <string name="user_name">User Name</string>
    <string name="user_id">User Id</string>
    <string name="login">Login</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_user_id">Enter user id</string>
    <string name="no_posts_to_show">No posts to show</string>
    <string name="be_the_first_one_to_post_here">Be the first one to post here</string>
    <string name="pin_this_post">Pin this Post</string>
    <string name="unpin_this_post">Unpin this Post</string>
    <string name="you_do_not_have_permission_to_create_a_post">You do not have permission to create a post</string>
    <string name="you_do_not_have_permission_to_comment">You do not have permission to comment</string>
    <string name="share_post">Share Post</string>
    <string name="edit_post">Edit Post</string>
    <string name="header">Header</string>
    <string name="button">Button</string>
    <string name="text_links">Text Links</string>
    <string name="choose_branding">Choose Branding</string>
    <string name="start">Start</string>
</resources>